--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "consign": "^0.1.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint": "^6.1.0",
