--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "nodejs-api-mongodb",
-  "version": "2.0.0",
-  "description": "API",
+  "name": "nodejs-restful-api-express",
+  "version": "3.0.0",
+  "description": "RESTful API made with Node.js where a registered user can list, create, update or delete courses that are stored in a database.",
   "main": "server.js",
-  "repository": "https://github.com/kazordoon/nodejs-api-mongodb.git",
+  "repository": "https://github.com/kazordoon/nodejs-restful-api-express",
   "author": "Felipe Barros",
   "license": "MIT",
   "scripts": {
