--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nodejs-restful-api-express",
   "version": "3.0.0",
   "description": "RESTful API made with Node.js where a registered user can list, create, update or delete courses that are stored in a database.",
-  "main": "server.js",
+  "main": "src/server.js",
   "repository": "https://github.com/kazordoon/nodejs-restful-api-express",
   "author": "Felipe Barros",
   "license": "MIT",
