--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "nodemon": "^2.0.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "dotenv": "^8.2.0"
+    "eslint-plugin-import": "^2.18.2"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "consign": "^0.1.6",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
