--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "start": "node ."
   },
   "devDependencies": {
-    "nodemon": "^2.0.1",
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-plugin-import": "^2.18.2"
+    "eslint-plugin-import": "^2.18.2",
+    "nodemon": "^2.0.1"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -24,6 +24,6 @@
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.12"
+    "mongoose": "^5.9.5"
   }
 }
