--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 MONGO_URL=mongodb://localhost:27017/api-express
 SECRET_KEY=mysecretkey
 PORT=3333
+CORS_ORIGIN=http://localhost:8080
 REDIS_HOST=localhost
 REDIS_PORT=6379
