refactor: Rename the SECRET_KEY environment variable to JWT_KEY

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 MONGO_URL=mongodb://localhost:27017/api-express
-SECRET_KEY=mysecretkey
+JWT_KEY=mysecretkey
 PORT=3333
 CORS_ORIGIN=http://localhost:8080
 REDIS_HOST=localhost
