chore: Set the "global-require" rule to "off"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
   "rules": {
     "no-console": "off",
     "no-unused-vars": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "global-require": "off"
   }
 }
