--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
     "no-console": "off",
     "no-unused-vars": "off",
     "no-underscore-dangle": "off",
-    "global-require": "off"
+    "global-require": "off",
+    "class-methods-use-this": "off"
   }
 }
