--- a/package.json
+++ b/package.json
@@ -7,14 +7,28 @@
   "author": "Felipe Barros",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/app/server.js",
-    "start": "node src/app/server.js"
+    "start": "node dist/src/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "tsc --outDir dist/",
+    "build:start": "yarn build && yarn start",
+    "test": "NODE_ENV=test yarn jest --verbose",
+    "test:coverage": "yarn test --coverage",
+    "test:only:changed": "yarn jest --onlyChanged --verbose",
+    "lint": "yarn eslint ./src/** && yarn prettier --check --ignore-unknown ./src/**",
+    "lint:fix": "yarn eslint ./src/** --fix && yarn prettier --write --ignore-unknown ./src/**"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.6.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "nodemon": "^2.0.6"
+    "jest": "^27.0.6",
+    "nodemon": "^2.0.6",
+    "ts-jest": "^27.0.4",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
